# cuda-learning

./: .gitignore  CMakeLists.txt  README.md  cuda学习笔记.md  study.md  week1_guide.md  week1_vector_add.cu  医学图像笔记.md  曾更生医学图像重建入门_学习路线.md
projects/: README.md
week1/: CMakeLists.txt  README.md
week1/src/: vector_addd.cu
week10/: CMakeLists.txt  README.md  mini_library_report_template.md  week10_guide.md
week10/src/: mini_library_benchmark.cu
week11/: CMakeLists.txt  README.md  medical_image_project_report_template.md  week11_guide.md
week11/src/: medical_image_convolution.cu
week2/: CMakeLists.txt  README.md  week2_guide.md
week2/src/: device_query.cu  vecotr_addd_benchmark.cu  vector_add_benchmark.cu
week3/: CMakeLists.txt  README.md  week3_guide.md
week3/src/: matmul_compare.cu  shared_memory_demo.cu
week4/: CMakeLists.txt  README.md  week4_guide.md
week4/src/: reduction_compare.cu
week5/: CMakeLists.txt  README.md  week5_guide.md
week5/src/: blelloch_scan_demo.cu  histogram_shared_atomic.cu
week6/: CMakeLists.txt  README.md  week6_guide.md
week6/src/: atomic_histogram_compare.cu  topk_two_stage_demo.cu
week7/: CMakeLists.txt  README.md  profile_commands_windows.md  profile_notes_template.md  week7_guide.md
week7/src/: profile_matmul_target.cu  profile_reduction_target.cu
week8/: CMakeLists.txt  README.md  optimization_report_template.md  week8_guide.md
week8/src/: matmul_optimization_compare.cu  try.cu
week9/: CMakeLists.txt  README.md  stream_experiment_notes_template.md  week9_guide.md
week9/src/: stream_overlap_compare.cu
